version/0.1/_sources/user_guide/index.rst.txt
.. _ref_user_guide:


User guide
==========

This section explains key concepts for implementing the Ansys tools common in your workflow.
You can use the Ansys tools common in your examples as well as integrate this library into
your own code.

.. grid:: 1 2 2 2

    .. grid-item-card:: Ansys tools path
        :padding: 2 2 2 2
        :link: ansys_tools_path
        :link-type: doc

        Learn how to use Ansys path tool.

    .. grid-item-card:: Ansys example downloader
        :padding: 2 2 2 2
        :link: ansys_downloader
        :link-type: doc

        Learn how to use the example downloader tool.

    .. grid-item-card:: Ansys exceptions
        :padding: 2 2 2 2
        :link: ansys_exceptions
        :link-type: doc

        Learn how to use the common exceptions.

    .. grid-item-card:: Ansys versioning tool
        :padding: 2 2 2 2
        :link: versioning
        :link-type: doc

        Learn how to use the versioning tool.

    .. grid-item-card:: Ansys report tool
        :padding: 2 2 2 2
        :link: report
        :link-type: doc

        Learn how to use the report tool.

    .. grid-item-card:: Ansys local launcher tool
        :padding: 2 2 2 2
        :link: launcher/index
        :link-type: doc

        Learn how to use the launcher tool.

.. toctree::
    :hidden:
    :maxdepth: 3

    ansys_tools_path
    ansys_downloader
    ansys_exceptions
    versioning
    report
    launcher/index